# mini_service

./: .env.example  .gitignore  Mini service API.postman_collection.json  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_12_18_2330-4a503fbc3bc1_add_product.py  2024_12_19_1213-30b938610638_add_product.py
src/: database.py
src/app/api/: product.py  router.py
src/app/crud/: product.py
src/app/model/: __init__.py  product.py
src/app/schema/: product.py
src/app/service/: product.py
src/common/: model.py  schema.py  settings.py
src/core/: conf.py  registrar.py
src/utils/: exception_handler.py  external_client.py  health_check.py  logs.py  trace_id.py
tests/: conftest.py
tests/api/: test_ping.py  test_product.py
tests/utils/: database.py
