[project]
name = "mini_service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Romaniv1912", email = "romaniv1912@gmail.com"},
]
dependencies = [
    "ruff>=0.8.3",
    "pre-commit>=4.0.1",
    "fastapi>=0.115.6",
    "pydantic-settings>=2.7.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
