[project]
name = "mini_service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Romaniv1912", email = "romaniv1912@gmail.com"},
]
dependencies = [
    "ruff>=0.8.3",
    "pre-commit>=4.0.1",
    "fastapi>=0.115.6",
    "pydantic-settings>=2.7.0",
    "asgi-correlation-id>=4.3.4",
    "fastapi-pagination>=0.12.32",
    "sqlalchemy>=2.0.36",
    "loguru>=0.7.3",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
